RESOLVED FIXED124378
[Cocoa] WKAction keys are not exported
https://bugs.webkit.org/show_bug.cgi?id=124378
Summary [Cocoa] WKAction keys are not exported
mitz
Reported 2013-11-14 13:25:40 PST
[Cocoa] WKAction keys are not exported
Attachments
Export the keys (3.75 KB, patch)
2013-11-14 13:28 PST, mitz
andersca: review+
mitz
Comment 1 2013-11-14 13:28:41 PST
Created attachment 216972 [details] Export the keys
WebKit Commit Bot
Comment 2 2013-11-14 13:31:18 PST
Attachment 216972 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit2/UIProcess/API/mac/WKBrowsingContextController.mm', u'Source/WebKit2/UIProcess/API/mac/WKBrowsingContextPolicyDelegate.h']" exit_code: 1 Source/WebKit2/UIProcess/API/mac/WKBrowsingContextPolicyDelegate.h:31: One space before end of line comments [whitespace/comments] [5] Source/WebKit2/UIProcess/API/mac/WKBrowsingContextPolicyDelegate.h:33: One space before end of line comments [whitespace/comments] [5] Source/WebKit2/UIProcess/API/mac/WKBrowsingContextPolicyDelegate.h:34: One space before end of line comments [whitespace/comments] [5] Source/WebKit2/UIProcess/API/mac/WKBrowsingContextPolicyDelegate.h:35: One space before end of line comments [whitespace/comments] [5] Source/WebKit2/UIProcess/API/mac/WKBrowsingContextPolicyDelegate.h:36: One space before end of line comments [whitespace/comments] [5] Source/WebKit2/UIProcess/API/mac/WKBrowsingContextPolicyDelegate.h:37: One space before end of line comments [whitespace/comments] [5] Total errors found: 6 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3 2013-11-14 13:38:47 PST
Note You need to log in before you can comment on or make changes to this bug.