[Cocoa] WKAction keys are not exported https://bugs.webkit.org/show_bug.cgi?id=124378

Reviewed by Anders Carlsson.

* UIProcess/API/mac/WKBrowsingContextController.mm: Made the keys constant pointers.
* UIProcess/API/mac/WKBrowsingContextPolicyDelegate.h: Exported the keys.



Canonical link: https://commits.webkit.org/142579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159309 268f45cc-cd09-0410-ab3c-d52691b4dbfc